--- a/app/src/main/res/layout/fragment_mine_share_to_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend.xml
@@ -67,9 +67,6 @@
             android:id="@+id/empty_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/y120"
             android:drawablePadding="@dimen/y16"
             android:drawableTop="@drawable/icon_no_friends"
             android:gravity="center_horizontal"
@@ -80,7 +77,7 @@
             hunt:layout_constraintBottom_toBottomOf="parent"
             hunt:layout_constraintEnd_toEndOf="parent"
             hunt:layout_constraintStart_toStartOf="parent"
-            hunt:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
+            hunt:layout_constraintTop_toBottomOf="@id/custom_toolbar" />
 
         <TextView
             android:id="@+id/btn_to_add"
