--- a/app/src/main/res/layout/mine_share_to_contract_toolbar.xml
+++ b/app/src/main/res/layout/mine_share_to_contract_toolbar.xml
@@ -1,65 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:id="@+id/rl_mine_share_to_contact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/iv_mine_share_to_contact_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/y15"
+        android:src="@drawable/nav_tab_back_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/iv_mine_share_to_contact_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/x15"
-                android:src="@drawable/nav_tab_back_selector" />
+    <TextView
+        android:id="@+id/tv_top_title"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/y48"
+        android:gravity="center_vertical"
+        android:text="@string/Tap3_ShareDevice_ToContacts"
+        android:textColor="@color/color_white"
+        android:textSize="@dimen/sp18"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_mine_share_to_contact_search"
+        app:layout_constraintStart_toEndOf="@+id/iv_mine_share_to_contact_back"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <FrameLayout
-                android:layout_toRightOf="@id/iv_mine_share_to_contact_back"
-                android:layout_toLeftOf="@+id/iv_mine_share_to_contact_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/et_search_contact"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/y48"
+        android:background="@null"
+        android:gravity="center_vertical"
+        android:hint="@string/Search"
+        android:singleLine="true"
+        android:textColor="@color/color_white"
+        android:textColorHint="#60ffffff"
+        android:textCursorDrawable="@drawable/search_friend_cursor_color"
+        android:textSize="@dimen/sp18"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_mine_share_to_contact_search"
+        app:layout_constraintStart_toEndOf="@+id/iv_mine_share_to_contact_back"
+        app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:gravity="center_vertical"
-                    android:id="@+id/tv_top_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y48"
-                    android:text="@string/Tap3_ShareDevice_ToContacts"
-                    android:textColor="@color/color_white"
-                    android:textSize="@dimen/sp18" />
+    <ImageView
+        android:id="@+id/iv_mine_share_to_contact_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="@dimen/y15"
+        android:src="@drawable/icon_search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-                <EditText
-                    android:gravity="center_vertical"
-                    android:singleLine="true"
-                    android:id="@+id/et_search_contact"
-                    android:visibility="gone"
-                    android:textColor="@color/color_white"
-                    android:textColorHint="#60ffffff"
-                    android:background="@null"
-                    android:hint="@string/Search"
-                    android:textCursorDrawable="@drawable/search_friend_cursor_color"
-                    android:textSize="@dimen/sp18"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y48" />
-            </FrameLayout>
-
-            <ImageView
-                android:src="@drawable/icon_search"
-                android:id="@+id/iv_mine_share_to_contact_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:padding="@dimen/x15" />
-        </RelativeLayout>
-    </FrameLayout>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
