--- a/app/src/main/res/layout/fragment_mine_share_to_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -42,6 +42,7 @@
             hunt:layout_constraintStart_toStartOf="parent"
             hunt:layout_constraintTop_toTopOf="parent"
             hunt:rightEnable="@{sharedNumber>0}"
+            hunt:rightVisibility="@{empty?View.GONE:View.VISIBLE}"
             hunt:toolbarRightTitle='@{@string/OK +" ("+(sharedNumber+hasSharedNumber)+ "/5)"}' />
 
         <View
@@ -65,7 +66,7 @@
 
         <TextView
             android:id="@+id/empty_picture"
-            android:layout_width="wrap_content"
+            android:layout_width="138dp"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/y16"
             android:drawableTop="@drawable/icon_no_friends"
@@ -77,7 +78,8 @@
             hunt:layout_constraintBottom_toBottomOf="parent"
             hunt:layout_constraintEnd_toEndOf="parent"
             hunt:layout_constraintStart_toStartOf="parent"
-            hunt:layout_constraintTop_toBottomOf="@id/custom_toolbar" />
+            hunt:layout_constraintTop_toBottomOf="parent"
+            tools:layout_editor_absoluteX="138dp" />
 
         <TextView
             android:id="@+id/btn_to_add"
